c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_member_no_semicolon.c
struct s {
    int a  // structure member declaration must end with a semicolon
};

int main(void) {
    return 0;
}